--- a/CSS/stylef.css
+++ b/CSS/stylef.css
@@ -76,6 +76,9 @@ h10 {
   align-content: center;
   text-align: center;
   align-items: center;
+  text-overflow: ellipsis; 
+  overflow: hidden; 
+  white-space: nowrap;
   margin:0 auto;
    display:block;
 }
